# pyData7

./: README.md  pyproject.toml
docker/: docker-compose.yaml
pydata7/: .env  pyproject.toml  run.py
pydata7/content_gatherer/: gatherer.py
pydata7/data/: README.md  test_2023-11-11_15-27-47.json
pydata7/data_generator/: data_generator.py  main.py
pydata7/database_manager/: connect_to_db.py  import_data.py
pydata7/fastapi/: api.py
pydata7/links_analysis/: link_filter.py  valid_link.py
pydata7/links_processing/: link_filter.py  valid_link.py
pydata7/regex/: github_regex.json  gitlab_regex.json  platform.json
pydata7/scripts/: commits.py  create_db.py  json_file_generation.py  repo_downloader.py
